# adventofcode

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
2022/: CMakeLists.txt  Makefile  day10  day10.cpp  day10bis  day11  day11bis  day11bis.cpp  day12  day12.cpp  day13  day13.extra  day13bis  day3  day3.cpp  day3bis  day3bis.cpp  day4  day4.cpp  day4bis  day5  day5bis  day5bis.cpp  day6  day6.cpp  day6bis  day6bis.cpp  day7  day8  day8bis  day9  day9.cpp  day9bis  day9bis.cpp  test.py
2022/src/: day1.cpp  day10.cpp  day10bis.cpp  day11.cpp  day11bis.cpp  day12.cpp  day13.cpp  day13bis.cpp  day2.cpp  day3.cpp  day3bis.cpp  day4.cpp  day4bis.cpp  day5.cpp  day5bis.cpp  day6.cpp  day6bis.cpp  day7.cpp  day8.cpp  day8bis.cpp  day9.cpp  day9bis.cpp
2023/: CMakeLists.txt  Makefile  algorithms.hpp  compile_flags.txt  day1.cpp  day10.cpp  day10bis.cpp  day10test.txt  day10test1.txt  day10test4.txt  day11.cpp  day11bis.cpp  day12.cpp  day12.hpp  day13.hpp  day13bis.cpp  day14.cpp  day14bis.cpp  day15.txt  day15bis.cpp  day16.cpp  day17.cpp  day17bis.cpp  day18bis.cpp  day19.cpp  day19bis.cpp  day1bis  day2.cpp  day20.cpp  day2bis.cpp  day3.cpp  day3bis.cpp  day4.cpp  day4bis.cpp  day5.cpp  day5bis.cpp  day6.cpp  day6bis.cpp  day7.cpp  day8.cpp  (+11 more)
2023/input/: day10test2.txt  day10test5.txt  day10triv.txt  day13.txt  day14simple.txt  day1exemple.txt
2023/src/: algorithms.hpp  bit_array.hpp  coord.hpp  day1.cpp  day10.cpp  day10bis.cpp  day11.cpp  day11bis.cpp  day12.cpp  day12bis.cpp  day13.cpp  day13.hpp  day13bis.cpp  day14.cpp  day14bis.cpp  day15.cpp  day15.hpp  day15bis.cpp  day16.cpp  day16.hpp  day16bis.cpp  day17.cpp  day17bis.cpp  day18.cpp  day18bis.cpp  day19.hpp  day1bis.cpp  day2.cpp  day20.cpp  day20bis.cpp  day21.cpp  day2bis.cpp  day3.cpp  day3bis.cpp  day4.cpp  day4bis.cpp  day5.cpp  day5bis.cpp  day6.cpp  day6bis.cpp  (+10 more)
2024/: CMakeLists.txt
2024/input/: day17test1.txt  day17test2.txt  day17test3.txt  day17test4.txt  day17test5.txt  day3.txt  day4.txt  day9.txt
2024/src/: day1.cpp  day10.cpp  day10bis.cpp  day11.cpp  day11bis.cpp  day12.cpp  day12bis.cpp  day13.cpp  day14.cpp  day14bis.cpp  day15.cpp  day15bis.cpp  day16.cpp  day16bis.cpp  day17.cpp  day17bis.cpp  day18.cpp  day18bis.cpp  day19.cpp  day19bis.cpp  day1bis.cpp  day2.cpp  day20.cpp  day20bis.cpp  day21.cpp  day22.cpp  day22bis.cpp  day23.cpp  day2bis.cpp  day3.cpp  day3bis.cpp  day4.cpp  day4bis.cpp  day5.cpp  day5bis.cpp  day6.cpp  day6bis.cpp  day6ter.cpp  day7.cpp  day7bis.cpp  (+4 more)
2025/: CMakeLists.txt
2025/src/: day1.cpp  day1bis.cpp  day2.cpp  day2bis.cpp
cmake/: add_day.cmake
common/: print.hpp  range.hpp  utils.hpp  vt100.hpp
scripts/: get_input.bash  increment_day.bash
